--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=8081
 route.health=/health
+route.ipRangeFilter=/
 ipranges.sourceUrl=https://ip-ranges.amazonaws.com/ip-ranges.json
+ipranges.validRegions=EU,US,AP,CN,SA,AF,CA
