Accept query for ALL filter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ server.port=8081
 route.health=/health
 route.ipRangeFilter=/
 ipranges.sourceUrl=https://ip-ranges.amazonaws.com/ip-ranges.json
-ipranges.validRegions=EU,US,AP,CN,SA,AF,CA
+ipranges.validRegions=EU,US,AP,CN,SA,AF,CA,ALL
