Add OpenAPI support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,13 @@
 server.port=8081
+
 route.health=/health
 route.ipRangeFilter=/
+
 ipranges.sourceUrl=https://ip-ranges.amazonaws.com/ip-ranges.json
 ipranges.validRegions=EU,US,AP,CN,SA,AF,CA,ALL
+
+springdoc.use-management-port=true
+springdoc.show-actuator=true
+# This property enables the openapi and swagger-ui endpoints to be exposed beneath the actuator base path.
+management.endpoints.web.exposure.include=openapi, swagger-ui
+management.server.port=9090
